# climate

./: .gitignore  README.md  mise.toml  pyproject.toml
_temp/: 1.parquet  console.json
climate/adapter/: discord.py
climate/cli/: climate.py  helpers.py  locale.py  narrative.py  temperature.py
climate/command/: __init__.py  commanda.py  locale.py  narrative.py  temperature.py
climate/dataframe/: __init__.py  temperature.py
climate/initialiser/: __init__.py  db.py  logging.py
climate/model/: __init__.py  helpers.py  locale.py  narrative_parser.py  temperature.py  weather_narrative.py
climate/plot/: __init__.py  temperature_plot.py
climate/presenter/: __init__.py  plot_channel_sender.py
climate/rdf/: __init__.py  gn.py  predicates.py  rdf_prefix.py  sparql.py  types_of.py
climate/repo/: __init__.py  graphdb.py  locale.py  narrative.py  temperature.py  triples.py
climate/util/: env.py
data/db/: climate-2023.ttl  climate-2024.ttl  climate-2025.ttl  climate-save.ttl  climate.ttl
notebooks/: temperatures.ipynb  temperatures.py
notebooks/__marimo__/session/: temperatures.py.json
src/climate/adapter/: __init__.py  channel.py  discord.py
src/climate/cli/: __init__.py  climate.py  helpers.py  locale.py  narrative.py  temperature.py
src/climate/command/: __init__.py  commanda.py  helpers.py  locale.py  narrative.py  temperature.py
src/climate/dataframe/: __init__.py  explain_results_to_df.py  expr.py  temperature.py
src/climate/initialiser/: __init__.py  db.py
src/climate/model/: __init__.py  helpers.py  locale.py  narrative_parser.py  temperature.py  weather_narrative.py
src/climate/plot/: __init__.py  temperature_plot.py
src/climate/presenter/: __init__.py  console.py  plot_channel_sender.py
src/climate/rdf/: __init__.py  binding.py  gn.py  predicates.py  rdf_prefix.py  sparql.py
src/climate/repo/: __init__.py  graphdb.py  locale.py  narrative.py  temperature.py  triples.py
src/climate/util/: env.py  fn.py  singleton.py
tests/shared/: __init__.py  graph.py  locale.py
tests/test_model/: test_narrative_parser.py  test_weather_narrative.py
